[package]
name = "adsb_deku"
version = "0.1.0"
authors = ["wcampbell"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "apps"
]

[dependencies]
deku = "0.12"

[dev-dependencies]
hexlit = "0.5"
assert_hex = "0.2"
