[package]
name = "adsb_deku"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Decoder for ADS-B(Automatic Depedent Surveillance-Broadcast) - written with deku"
repository = "https://github.com/wcampbel0x2a/adsb_deku"
keywords = ["deku", "adsb", "aerorust", "airplane", "radar"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "apps"
]

[dependencies]
deku = "0.12"

[dev-dependencies]
hex = "0.4"
hexlit = "0.5"
assert_hex = "0.2"
