[package]
name = "rsadsb_apps"
version = "0.6.0"
license = "MIT"
edition = "2021"
rust-version = "1.59.0"

[[bin]]
name = "radar"
path = "src/radar/radar.rs"

[[bin]]
name = "1090"
path = "src/1090/1090.rs"

[dependencies]
adsb_deku = { path = "../libadsb_deku", version = "0.6.0" }
rsadsb_common = { path = "../rsadsb_common", version = "0.6.0" }
hex = "0.4.0"
crossterm = "0.23.0"
clap = {version = "3.1.0", features = ["color", "derive", "wrap_help"]}
tui = "0.18.0"
gpsd_proto = "0.7.0"
tracing = "0.1.0"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
tracing-appender = "0.2.0"
anyhow = { version = "1.0", features = ["backtrace"] }
csv = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3.7", features = ["local-offset"] }
