[package]
name = "rsadsb_apps"
version = "0.6.2"
rust-version.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "radar"
path = "src/radar/radar.rs"

[[bin]]
name = "1090"
path = "src/1090/1090.rs"

[dependencies]
adsb_deku = { path = "../libadsb_deku" }
rsadsb_common = { path = "../rsadsb_common" }
hex = "0.4.0"
crossterm = "0.26.1"
clap = { version = "4.0.0", features = ["color", "derive", "wrap_help"] }
ratatui = "0.20.1"
gpsd_proto = "0.7.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
tracing-appender = "0.2.0"
anyhow = { version = "1.0", features = ["backtrace"] }
csv = { version = "1.3" }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3.7", features = ["local-offset"] }
