[package]
name = "adsb_deku"
description = "Decoder for ADS-B(Automatic Depedent Surveillance-Broadcast) - written with deku"
repository = "https://github.com/wcampbel0x2a/adsb_deku"
keywords = ["deku", "adsb", "aerorust", "airplane", "radar"]
categories = ["aerospace::protocols", "parsing"]
version = "0.7.0"
rust-version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["deku/std", "alloc"]
alloc = ["deku/alloc"]

[dependencies]
deku = { version = "0.16", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
libm = "0.2.8"

[dev-dependencies]
hex = "0.4"
hexlit = "0.5"
assert_hex = "0.4"
criterion = "0.5"

[[bench]]
name = "decoding"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
