[package]
name = "rsadsb_common"
description = "common library for adsb_deku"
repository = "https://github.com/wcampbel0x2a/adsb_deku"
keywords = ["deku", "adsb", "aerorust", "airplane", "radar"]
categories = ["aerospace::protocols", "parsing"]
version = "0.6.1"
rust-version.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["adsb_deku/std", "tracing/std", "alloc"]
alloc = ["adsb_deku/alloc", "tracing"]

[dependencies]
adsb_deku = { path = "../libadsb_deku", version = "0.6.2", default-features = false }
tracing = { version = "0.1.0", default-features = false, optional = true}
libm = "0.2.2"
