[package]
name = "rsadsb_common"
description = "common library for adsb_deku"
repository = "https://github.com/wcampbel0x2a/adsb_deku"
keywords = ["deku", "adsb", "aerorust", "airplane", "radar"]
categories = ["aerospace::protocols", "parsing"]
version = "0.6.1"
rust-version.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["adsb_deku/std", "tracing/std", "alloc"]
alloc = ["adsb_deku/alloc", "tracing"]
serde = ["dep:serde", "dep:serde_with", "adsb_deku/serde"]

[dependencies]
adsb_deku = { path = "../libadsb_deku", version = "0.6.2", default-features = false }
libm = "0.2.2"
tracing = { version = "0.1.0", default-features = false, optional = true}
serde = { version = "1.0", features = ["derive"], optional = true }
serde_with = { version = "2.0.1",optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
