[package]
name = "rsadsb_common"
description = "common library for adsb_deku"
repository = "https://github.com/wcampbel0x2a/adsb_deku"
keywords = ["deku", "adsb", "aerorust", "airplane", "radar"]
categories = ["aerospace::protocols", "parsing"]
version = "0.7.0"
rust-version.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["adsb_deku/std", "tracing/std", "alloc"]
alloc = ["adsb_deku/alloc", "tracing"]
serde = ["dep:serde", "dep:serde_with", "adsb_deku/serde"]

[dependencies]
adsb_deku = { path = "../libadsb_deku", default-features = false, version = "0.7.0" }
libm = "0.2.8"
tracing = { version = "0.1.40", default-features = false, optional = true}
serde = { version = "1.0", features = ["derive"], optional = true }
serde_with = { version = "3.11.0",optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
